# Pixelator

./: .gitignore  README.md  pyproject.toml
docs/: PROGRESS.md  layer-split-aliyun.md
docs/superpowers/plans/: 2026-06-14-gui-timeline-crop-packaging.md  2026-06-14-pixelator-desktop-gui-implementation.md  2026-06-14-pixelator-v0.1-implementation.md  2026-06-17-layer-split-cloud-implementation.md
docs/superpowers/specs/: 2026-06-14-desktop-gui-design.md  2026-06-14-pixelator-v0.1-design.md  2026-06-17-layer-split-cloud-design.md
presets/: amber-ruin-dither.yaml  ash-violet-dream-dither.yaml  cold-sci-fi-dither.yaml  dark-fantasy-dither.yaml  deep-sea-module-dither.yaml  dust-wasteland-dither.yaml  fast.yaml  moonlit-castle-dither.yaml  muted-green-dither.yaml  noir-blue-dither.yaml  old-film-dusk-dither.yaml  red-alert-dither.yaml  rust-industrial-dither.yaml  sickly-neon-dither.yaml  stable.yaml
scripts/: package_windows.ps1  pixelator_gui_entry.py
src/pixelator/: __main__.py  cli.py  config.py  effects.py  errors.py  image_io.py  image_ops.py  media.py  palette.py  palette_io.py  palette_studio.py  pipeline.py  style_filters.py  video.py
src/pixelator/ai/: __init__.py  aliyun_rpc.py  asset_store.py  background_removal.py  constants.py  dashscope_client.py  env.py  prompt_builder.py  super_resolution.py  types.py
src/pixelator/gui/: __init__.py  ai_panel.py  ai_worker.py  app.py  icons.py  main_window.py  models.py  palette_panel.py  preview.py  queue_panel.py  qwen_lab_panel.py  settings_panel.py  super_resolution_panel.py  super_resolution_worker.py  worker.py
src/pixelator/layering/: __init__.py  archive.py  cli.py  client.py  commands.py  types.py
src/pixelator/layering_service/: app.py  (+3 more)
tests/: test_ai_asset_store.py  test_ai_background_removal.py  test_ai_dashscope_client.py  test_ai_env.py  test_ai_prompt_builder.py  test_ai_super_resolution.py  test_cli.py  test_config.py  test_effects.py  test_gui_ai_panel.py  test_gui_main_window.py  test_gui_models.py  test_gui_palette_panel.py  test_gui_preview.py  test_gui_queue_panel.py  test_gui_qwen_lab_panel.py  test_gui_settings_panel.py  test_gui_super_resolution_panel.py  test_image_ops.py  test_layering_archive.py  test_layering_cli.py  test_layering_client.py  test_layering_service.py  test_layering_types.py  test_package.py  test_palette.py  test_palette_studio.py  test_pipeline.py  test_style_filters.py  test_video.py
