[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelator"
version = "1.1.4"
description = "CLI video/GIF-to-light-pixel-art workflow tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "imageio-ffmpeg>=0.4.9",
  "numpy>=1.26",
  "Pillow>=10.0",
  "PySide6>=6.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.0",
  "pytest>=8.0",
]

[project.scripts]
pixelator = "pixelator.cli:main"
pixelator-gui = "pixelator.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
