[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelator"
version = "1.2.0"
description = "CLI and desktop media-to-light-pixel-art workflow tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "imageio-ffmpeg>=0.4.9",
  "numpy>=1.26",
  "Pillow>=10.0",
  "PySide6>=6.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.0",
  "pyinstaller>=6.0",
  "pytest>=8.0",
]
layer-cloud = [
  "fastapi>=0.115",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
]

[project.scripts]
pixelator = "pixelator.cli:main"
pixelator-gui = "pixelator.gui.app:main"
pixelator-layer = "pixelator.layering.cli:main"
pixelator-layer-service = "pixelator.layering_service.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
